--- a/app/src/main/res/layout/business_report_fragment_sale.xml
+++ b/app/src/main/res/layout/business_report_fragment_sale.xml
@@ -24,9 +24,12 @@
             android:layout_height="0dp"
             android:layout_weight="1">
             <Spinner
+                android:id="@+id/spinner_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:spinnerMode="dropdown"
+                android:entries="@array/month_array" >
             </Spinner>
         </LinearLayout>
 
@@ -49,16 +52,34 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <TextView
-                        android:id="@+id/tv_report_sale_doanhthu"
-                        android:layout_width="149dp"
-                        android:layout_height="69dp"
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_marginStart="25dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
                         android:background="@drawable/business_shape_green"
-                        android:text="Doanh thu"
-                        android:textAlignment="center"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_report_sale_doanh_thu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Doanh thu"
+                            android:textAlignment="center"
+                            android:textColor="@color/black" />
+                        <TextView
+                            android:id="@+id/business_report_sale_doanh_thu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/demo_0"
+                            android:textSize="25sp"/>
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -66,16 +87,34 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <TextView
-                        android:id="@+id/tv_report_sale_loinhuan"
-                        android:layout_width="149dp"
-                        android:layout_height="69dp"
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_marginStart="25dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
                         android:background="@drawable/business_shape_green"
-                        android:text="Lợi nhuận"
-                        android:textAlignment="center"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_report_sale_Loi_nhuan"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Loi nhuan"
+                            android:textAlignment="center"
+                            android:textColor="@color/black" />
+                        <TextView
+                            android:id="@+id/business_report_sale_Loi_nhuan"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/demo_0"
+                            android:textSize="25sp"/>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
@@ -91,16 +130,37 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <TextView
-                        android:id="@+id/tv_report_sale_khachang"
-                        android:layout_width="149dp"
-                        android:layout_height="69dp"
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_marginStart="25dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
                         android:background="@drawable/business_shape_red"
-                        android:text="Khách hàng"
-                        android:textAlignment="center"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_report_sale_don_hang"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Đơn hàng"
+                            android:textAlignment="center"
+                            android:textColor="@color/black" />
+                        <TextView
+                            android:id="@+id/business_report_sale_don_hang"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/demo_0"
+                            android:textSize="25sp"/>
+                    </LinearLayout>
+
+
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -108,16 +168,35 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1">
 
-                    <TextView
-                        android:id="@+id/tv_report_sale_donhang"
-                        android:layout_width="149dp"
-                        android:layout_height="69dp"
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_marginStart="25dp"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
                         android:background="@drawable/business_shape_red"
-                        android:text="Đơn hàng"
-                        android:textAlignment="center"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_report_sale_so_luong_ban_ra"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="So luong ban ra"
+                            android:textAlignment="center"
+                            android:textColor="@color/black" />
+                        <TextView
+                            android:id="@+id/business_report_sale_so_luong_ban_ra"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/demo_0"
+                            android:textSize="25sp"/>
+                    </LinearLayout>
+
                 </LinearLayout>
             </LinearLayout>
 
@@ -193,6 +272,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/lv_top_products"
             android:background="#75CBA7FD" />
     </LinearLayout>
 
