--- a/app/src/main/res/layout/dialog_edit_debt_personal.xml
+++ b/app/src/main/res/layout/dialog_edit_debt_personal.xml
@@ -13,12 +13,14 @@
         android:gravity="end"
         android:layout_marginBottom="16dp">
 
+
+
         <TextView
             android:id="@+id/tv_NhanDan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sửa nợ"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:gravity="center"
             android:textColor="@color/black"
@@ -38,6 +40,47 @@
             android:layout_height="wrap_content"
             android:text="Sửa" />
     </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners_select_image"
+        android:layout_marginRight="@dimen/txt_size_12sp"
+        android:layout_gravity="center"
+        android:padding="@dimen/txt_size_12sp"
+        >
+        <ImageView
+            android:id="@+id/imv_show_image"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+
+            />
+    </LinearLayout>
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_ChonAnh"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_select_image"
+            android:text="Chọn ảnh đại diện cho thể loại"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical|start"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
+            />
+
+
+    </LinearLayout>
+
+
 
     <EditText
         android:id="@+id/etNoiDungNo"
