--- a/app/src/main/res/layout/fragment_budget_statistics.xml
+++ b/app/src/main/res/layout/fragment_budget_statistics.xml
@@ -149,8 +149,19 @@
                 android:layout_marginRight="20dp"
                 android:layout_weight="1"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="0dp"/>
+                android:layout_marginBottom="0dp"
+                android:visibility="visible"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_KhoanThu"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="0dp"
+                android:visibility="gone"/>
             <!-- Đường kẻ ngang -->
             <View
                 android:layout_width="match_parent"
@@ -174,7 +185,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="23dp"
-                    android:text="Thêm nợ"
+                    android:text="Thêm"
                     android:textStyle="bold"
                     android:textColor="#FFF8DE"
                     android:textSize="11sp"
